Use bolder yellow and no animation for stuck puzzles. Fixes #40

--- a/blackboard.less
+++ b/blackboard.less
@@ -147,14 +147,6 @@ body {
     text-transform: uppercase;
   }
 }
-@keyframes yellowblink {
-  0%   { background: #FF9; }
-  80%  { background: #FF9; }
-  85%  { background: #FFC; }
-  90%  { background: #FF9; }
-  95%  { background: #FFC; }
-  100% { background: #FF9; }
-}
 
 #bb-right-sidebar {
   position: fixed;
@@ -211,10 +203,7 @@ body {
       background:#AAFF99;
     }
     .bb-status-stuck {
-      background:#FF9;
-      animation-name: yellowblink;
-      animation-duration: 5s;
-      animation-iteration-count: infinite;
+      background:#FF0;
     }
     .bb-status-unsolved {
       background:#FCFCFC;
